# modformer

./: Cargo.toml  LICENSE  LICENSE.md  NOTES.md  README.md
.github/: FUNDING.yml
crates/core/cli/: Cargo.toml
crates/core/cli/src/: app.rs  args.rs  lib.rs
crates/core/cli/src/content/: after.txt
crates/core/core/: Cargo.toml
crates/core/traits/: Cargo.toml
crates/core/traits/src/: lib.rs
crates/modformer/: Cargo.toml
crates/modformer/src/: lib.rs
crates/modformer_cli/: Cargo.toml
crates/modformer_cli/src/: app.rs  lib.rs  utils.rs
crates/modformer_core/: Cargo.toml
crates/modformer_fs_writer/: Cargo.toml
crates/modformer_model/: Cargo.toml
crates/modformer_model/src/: lib.rs
crates/modformer_model/src/data/: directory.rs  file.rs  file_system.rs  mod.rs  relationships.rs  vfs.rs
crates/modformer_model/src/file_system/: directory.rs  file.rs  file_system.rs  relationships.rs
crates/modformer_model/src/fs/: directory.rs  file.rs  file_system.rs  relationships.rs
crates/modformer_model/src/process/: mod.rs
crates/modformer_transformer/: Cargo.toml
crates/modformer_transformer/src/: builder.rs  lib.rs
crates/modformer_transformer/src/builder/: mod.rs  read.rs
crates/modformer_transformer/src/phases/: read.rs
crates/modules/fs/: Cargo.toml
crates/modules/modformer_fs/: Cargo.toml  lib.rs
example/site_builder/: Cargo.toml
example/site_builder/src/: main.rs
modules/modformer_fs/: Cargo.toml
modules/modformer_fs_reader/: Cargo.toml
modules/modformer_fs_writer/: Cargo.toml
tests/example/: config.toml
(+3 files in other folders)
