[package]
name = "modformer_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["env"] }
modformer_core = { path = "../core" }
modformer_traits = { path = "../traits" }
time = { version = "0.3", features = ["formatting", "local-offset"]}
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
